--- a/BioArchLinux/r-png/PKGBUILD
+++ b/BioArchLinux/r-png/PKGBUILD
@@ -1,28 +1,32 @@
-# system requirements: libpng
-# Maintainer: Guoyi Zhang <guoyizhang at malacology dot net>
+# Maintainer: Pekka Ristola <pekkarr [at] protonmail [dot] com>
+# Contributor: Guoyi Zhang <guoyizhang at malacology dot net>
+# Contributor: peippo <christoph+aur@christophfink.com>
+# Contributor: Viktor Drobot (aka dviktor) linux776 [at] gmail [dot] com
+# Contributor: Grey Christoforo <first name at last name dot net>
 
 _pkgname=png
 _pkgver=0.1-8
 pkgname=r-${_pkgname,,}
-pkgver=0.1.8
+pkgver=${_pkgver//-/.}
 pkgrel=3
-pkgdesc='Read and write PNG images'
-arch=('x86_64')
+pkgdesc="Read and write PNG images"
+arch=(x86_64)
 url="https://cran.r-project.org/package=${_pkgname}"
-license=('GPL')
+license=(GPL)
 depends=(
-  r
   libpng
+  r
 )
 source=("https://cran.r-project.org/src/contrib/${_pkgname}_${_pkgver}.tar.gz")
+md5sums=('5667528b7bbdd8c058018ea7ac6573a7')
 sha256sums=('5a36fabb6d62ba2533d3fc4cececd07891942cfb76fe689ec0d550d08762f61c')
 
 build() {
-  R CMD INSTALL ${_pkgname}_${_pkgver}.tar.gz -l "${srcdir}"
+  mkdir -p build
+  R CMD INSTALL "$_pkgname" -l build
 }
 
 package() {
-  install -dm0755 "${pkgdir}/usr/lib/R/library"
-  cp -a --no-preserve=ownership "${_pkgname}" "${pkgdir}/usr/lib/R/library"
+  install -d "$pkgdir/usr/lib/R/library"
+  cp -a --no-preserve=ownership "build/$_pkgname" "$pkgdir/usr/lib/R/library"
 }
-# vim:set ts=2 sw=2 et:
