--- a/BioArchLinux/tnt/PKGBUILD
+++ b/BioArchLinux/tnt/PKGBUILD
@@ -5,7 +5,8 @@ pkgbase=tnt
 pkgname=('tnt' 'tnt-mpi' 'tnt-gui' 'tnt-extra')
 pkgver=2023.09.01
 pkgrel=1
-pkgdesc="Tree analysis using New Technology. https://doi.org/10.1111/cla.12160"
+pkgdesc="Tree analysis using New Technology \
+	 https://doi.org/10.1111/cla.12524"
 arch=('x86_64')
 url="http://www.lillo.org.ar/phylogeny/tnt/"
 license=('custom')
