r-humantranscriptomecompendium: fix depends, use metadata checks

--- a/BioArchLinux/r-humantranscriptomecompendium/lilac.yaml
+++ b/BioArchLinux/r-humantranscriptomecompendium/lilac.yaml
@@ -1,14 +1,20 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
+- r-biocmanager
 - r-s4vectors
 - r-shiny
 - r-ssrch
 - r-summarizedexperiment
+repo_makedepends:
+- r-biocfilecache
+- r-rhdf5client
+- r-testthat
 update_on:
-- regex: HumanTranscriptomeCompendium_([\d._-]+).tar.gz
-  source: regex
-  url: https://bioconductor.org/packages/HumanTranscriptomeCompendium
+- source: rpkgs
+  pkgname: HumanTranscriptomeCompendium
+  repo: bioc
+  md5: true
 - alias: r
