--- a/BioArchLinux/r-mgm/PKGBUILD
+++ b/BioArchLinux/r-mgm/PKGBUILD
@@ -1,34 +1,43 @@
-# Maintainer: sukanka <su975853527@gmail.com>
+# Maintainer: Pekka Ristola <pekkarr [at] protonmail [dot] com>
+# Contributor: sukanka <su975853527@gmail.com>
 
 _pkgname=mgm
 _pkgver=1.2-14
 pkgname=r-${_pkgname,,}
-pkgver=1.2.14
+pkgver=${_pkgver//-/.}
 pkgrel=1
-pkgdesc='Estimating Time-Varying k-Order Mixed Graphical Models'
-arch=('any')
+pkgdesc="Estimating Time-Varying k-Order Mixed Graphical Models"
+arch=(any)
 url="https://cran.r-project.org/package=${_pkgname}"
-license=('GPL')
+license=(GPL)
 depends=(
-  r
   r-glmnet
   r-gtools
   r-hmisc
   r-qgraph
   r-stringr
 )
+checkdepends=(
+  r-testthat
+)
 optdepends=(
   r-testthat
 )
 source=("https://cran.r-project.org/src/contrib/${_pkgname}_${_pkgver}.tar.gz")
+md5sums=('153028b85da8ceafb4bfaaf3c7fa410f')
 sha256sums=('fcdf895a6d782217e8705394a21f5803cbaccaefb94c5618b4ea6f6482dbb0c8')
 
 build() {
-  R CMD INSTALL ${_pkgname}_${_pkgver}.tar.gz -l "${srcdir}"
+  mkdir -p build
+  R CMD INSTALL "$_pkgname" -l build
+}
+
+check() {
+  cd "$_pkgname/tests"
+  R_LIBS="$srcdir/build" NOT_CRAN=true Rscript --vanilla testthat.R
 }
 
 package() {
-  install -dm0755 "${pkgdir}/usr/lib/R/library"
-  cp -a --no-preserve=ownership "${_pkgname}" "${pkgdir}/usr/lib/R/library"
+  install -d "$pkgdir/usr/lib/R/library"
+  cp -a --no-preserve=ownership "build/$_pkgname" "$pkgdir/usr/lib/R/library"
 }
-# vim:set ts=2 sw=2 et:
