r-desolve: use metadata checks

--- a/BioArchLinux/r-desolve/lilac.yaml
+++ b/BioArchLinux/r-desolve/lilac.yaml
@@ -1,9 +1,14 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 update_on:
-- regex: deSolve_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=deSolve
+- source: rpkgs
+  pkgname: deSolve
+  repo: cran
+  md5: true
 - alias: r
+- source: alpmfiles
+  pkgname: blas
+  filename: usr/lib/libblas\.so\.([^.]+)
+  repo: extra
