r-chetah: use metadata checks

--- a/BioArchLinux/r-chetah/lilac.yaml
+++ b/BioArchLinux/r-chetah/lilac.yaml
@@ -1,7 +1,7 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-biodist
 - r-corrplot
@@ -15,8 +15,12 @@ repo_depends:
 - r-shiny
 - r-singlecellexperiment
 - r-summarizedexperiment
+repo_makedepends:
+- r-testthat
+- r-vdiffr
 update_on:
-- regex: <td>(\d+.\d+.\d+)</td>
-  source: regex
-  url: https://bioconductor.org/packages/CHETAH
+- source: rpkgs
+  pkgname: CHETAH
+  repo: bioc
+  md5: true
 - alias: r
