--- a/BioArchLinux/r-gcatest/lilac.yaml
+++ b/BioArchLinux/r-gcatest/lilac.yaml
@@ -1,11 +1,14 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-lfa
+repo_makedepends:
+- r-testthat
 update_on:
-- regex: <td>(\d+.\d+.\d+)</td>
-  source: regex
-  url: https://bioconductor.org/packages/gcatest
+- source: rpkgs
+  pkgname: gcatest
+  repo: bioc
+  md5: true
 - alias: r
