r-radiant.data: fix depends, use metadata checks

--- a/BioArchLinux/r-radiant.data/lilac.yaml
+++ b/BioArchLinux/r-radiant.data/lilac.yaml
@@ -1,8 +1,9 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
+- r-arrow
 - r-base64enc
 - r-broom
 - r-bslib
@@ -36,8 +37,11 @@ repo_depends:
 - r-tibble
 - r-tidyr
 - r-writexl
+repo_makedepends:
+- r-testthat
 update_on:
-- regex: radiant.data_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=radiant.data
+- source: rpkgs
+  pkgname: radiant.data
+  repo: cran
+  md5: true
 - alias: r
