r-metavolcanor: use metadata checks

--- a/BioArchLinux/r-metavolcanor/lilac.yaml
+++ b/BioArchLinux/r-metavolcanor/lilac.yaml
@@ -1,7 +1,7 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-cowplot
 - r-data.table
@@ -14,9 +14,11 @@ repo_depends:
 - r-rlang
 - r-tidyr
 - r-topconfects
+repo_makedepends:
+- r-testthat
 update_on:
-- regex: <td>(\d+.\d+.\d+)</td>
-  source: regex
-  url: https://bioconductor.org/packages/MetaVolcanoR
+- source: rpkgs
+  pkgname: MetaVolcanoR
+  repo: bioc
+  md5: true
 - alias: r
-pre_build: vcs_update
