--- a/BioArchLinux/r-mfa/lilac.yaml
+++ b/BioArchLinux/r-mfa/lilac.yaml
@@ -1,7 +1,7 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-biobase
 - r-coda
@@ -13,8 +13,11 @@ repo_depends:
 - r-mcmcpack
 - r-rcpp
 - r-tibble
+repo_makedepends:
+- r-testthat
 update_on:
-- regex: mfa_([\d._-]+).tar.gz
-  source: regex
-  url: https://bioconductor.org/packages/mfa
+- source: rpkgs
+  pkgname: mfa
+  repo: bioc
+  md5: true
 - alias: r
