r-phemd: use metadata checks

--- a/BioArchLinux/r-phemd/lilac.yaml
+++ b/BioArchLinux/r-phemd/lilac.yaml
@@ -1,7 +1,7 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-biobase
 - r-biocgenerics
@@ -26,7 +26,8 @@ repo_depends:
 - r-transport
 - r-vgam
 update_on:
-- regex: <td>(\d+.\d+.\d+)</td>
-  source: regex
-  url: https://bioconductor.org/packages/phemd
+- source: rpkgs
+  pkgname: phemd
+  repo: bioc
+  md5: true
 - alias: r
