--- a/BioArchLinux/r-rnaseqpower/lilac.yaml
+++ b/BioArchLinux/r-rnaseqpower/lilac.yaml
@@ -1,10 +1,10 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 update_on:
-- regex: <td>(\d+.\d+.\d+)</td>
-  source: regex
-  url: https://bioconductor.org/packages/RNASeqPower
+- source: rpkgs
+  pkgname: RNASeqPower
+  repo: bioc
+  md5: true
 - alias: r
-pre_build: vcs_update
