--- a/BioArchLinux/r-synapter/lilac.yaml
+++ b/BioArchLinux/r-synapter/lilac.yaml
@@ -1,7 +1,7 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-biobase
 - r-biostrings
@@ -12,9 +12,11 @@ repo_depends:
 - r-rcolorbrewer
 - r-readr
 - r-rmarkdown
+repo_makedepends:
+- r-testthat
 update_on:
-- regex: <td>(\d+.\d+.\d+)</td>
-  source: regex
-  url: https://bioconductor.org/packages/synapter
+- source: rpkgs
+  pkgname: synapter
+  repo: bioc
+  md5: true
 - alias: r
-pre_build: vcs_update
