--- a/BioArchLinux/r-tenxplore/PKGBUILD
+++ b/BioArchLinux/r-tenxplore/PKGBUILD
@@ -1,16 +1,16 @@
-# Maintainer: Guoyi Zhang <guoyizhang at malacology dot net>
+# Maintainer: Pekka Ristola <pekkarr [at] protonmail [dot] com>
+# Contributor: Guoyi Zhang <guoyizhang at malacology dot net>
 
 _pkgname=tenXplore
 _pkgver=1.22.0
 pkgname=r-${_pkgname,,}
-pkgver=1.22.0
+pkgver=${_pkgver//-/.}
 pkgrel=1
-pkgdesc='ontological exploration of scRNA-seq of 1.3 million mouse neurons from 10x genomics'
-arch=('any')
+pkgdesc="ontological exploration of scRNA-seq of 1.3 million mouse neurons from 10x genomics"
+arch=(any)
 url="https://bioconductor.org/packages/${_pkgname}"
-license=('Artistic2.0')
+license=(Artistic2.0)
 depends=(
-  r
   r-annotationdbi
   r-matrixstats
   r-ontoproc
@@ -18,6 +18,9 @@ depends=(
   r-restfulse
   r-shiny
   r-summarizedexperiment
+)
+checkdepends=(
+  r-testthat
 )
 optdepends=(
   r-biocstyle
@@ -27,21 +30,20 @@ optdepends=(
   r-testthat
 )
 source=("https://bioconductor.org/packages/release/bioc/src/contrib/${_pkgname}_${_pkgver}.tar.gz")
+md5sums=('96c18d808ccb0106111ce4bf1d00ec5c')
 sha256sums=('a3abc9e04879cc200d71d8ac5aa0d1b0e5d4c5037cd110824ce4b4b77de96e1f')
 
-prepare(){
-  # Do not import RESTfulSummarizedExperiment from RESTfulSE
-  sed -i '/RESTfulSummarizedExperiment/d' ${_pkgname}/R/${_pkgname}.R ${_pkgname}/NAMESPACE
-  tar -zcvf ${_pkgname}_${_pkgver}_1.tar.gz  ${_pkgname}
-
+build() {
+  mkdir -p build
+  R CMD INSTALL "$_pkgname" -l build
 }
 
-build() {
-  R CMD INSTALL ${_pkgname}_${_pkgver}_1.tar.gz -l "${srcdir}"
+check() {
+  cd "$_pkgname/tests"
+  R_LIBS="$srcdir/build" NOT_CRAN=true Rscript --vanilla test.R
 }
 
 package() {
-  install -dm0755 "${pkgdir}/usr/lib/R/library"
-  cp -a --no-preserve=ownership "${_pkgname}" "${pkgdir}/usr/lib/R/library"
+  install -d "$pkgdir/usr/lib/R/library"
+  cp -a --no-preserve=ownership "build/$_pkgname" "$pkgdir/usr/lib/R/library"
 }
-# vim:set ts=2 sw=2 et:
