--- a/BioArchLinux/r-tenxplore/lilac.yaml
+++ b/BioArchLinux/r-tenxplore/lilac.yaml
@@ -1,7 +1,7 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: starsareintherose@outlook.com
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-annotationdbi
 - r-matrixstats
@@ -10,8 +10,11 @@ repo_depends:
 - r-restfulse
 - r-shiny
 - r-summarizedexperiment
+repo_makedepends:
+- r-testthat
 update_on:
-- regex: tenXplore_([\d._-]+).tar.gz
-  source: regex
-  url: https://bioconductor.org/packages/tenXplore
+- source: rpkgs
+  pkgname: tenXplore
+  repo: bioc
+  md5: true
 - alias: r
