r-tiff: use metadata checks

--- a/BioArchLinux/r-tiff/lilac.yaml
+++ b/BioArchLinux/r-tiff/lilac.yaml
@@ -1,12 +1,15 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 update_on:
-- regex: tiff_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=tiff
+- source: rpkgs
+  pkgname: tiff
+  repo: cran
+  md5: true
 - alias: r
 - source: alpm
   alpm: libtiff
+  repo: extra
+  provided: libtiff.so
   strip_release: true
