r-stringi: use metadata checks

--- a/BioArchLinux/r-stringi/PKGBUILD
+++ b/BioArchLinux/r-stringi/PKGBUILD
@@ -1,28 +1,36 @@
-# system requirements: C++11, ICU4C (>= 55, optional)
-# Maintainer: Guoyi Zhang <guoyizhang at malacology dot net>
+# Maintainer: Pekka Ristola <pekkarr [at] protonmail [dot] com>
+# Contributor: Guoyi Zhang <guoyizhang at malacology dot net>
+# Contributor: peippo <christoph+aur@christophfink.com>
+# Contributor: Viktor Drobot (aka dviktor) linux776 [at] gmail [dot] com
+# Contributor: Grey Christoforo <first name at last name dot net>
+# Contributor: Alex Branham <branham@utexas.edu>
 
 _pkgname=stringi
 _pkgver=1.7.12
 pkgname=r-${_pkgname,,}
-pkgver=1.7.12
+pkgver=${_pkgver//-/.}
 pkgrel=3
-pkgdesc='Character String Processing Facilities'
-arch=('x86_64')
+pkgdesc="Fast and Portable Character String Processing Facilities"
+arch=(x86_64)
 url="https://cran.r-project.org/package=${_pkgname}"
-license=('custom')
+license=(custom)
 depends=(
+  icu
   r
 )
 source=("https://cran.r-project.org/src/contrib/${_pkgname}_${_pkgver}.tar.gz")
+md5sums=('311f929662e309f508e0a3d33e2ecd0e')
 sha256sums=('efe8ac2900001f986a75db5641fbb24587a6d23de274a6a85c39dfa58921e009')
 
 build() {
-  R CMD INSTALL ${_pkgname}_${_pkgver}.tar.gz -l "${srcdir}"
+  mkdir -p build
+  R CMD INSTALL "$_pkgname" -l build
 }
 
 package() {
-  install -dm0755 "${pkgdir}/usr/lib/R/library"
-  cp -a --no-preserve=ownership "${_pkgname}" "${pkgdir}/usr/lib/R/library"
-  install -Dm644 "${_pkgname}/LICENSE" -t "${pkgdir}/usr/share/licenses/${pkgname}"
+  install -d "$pkgdir/usr/lib/R/library"
+  cp -a --no-preserve=ownership "build/$_pkgname" "$pkgdir/usr/lib/R/library"
+
+  install -d "$pkgdir/usr/share/licenses/$pkgname"
+  ln -s "/usr/lib/R/library/$_pkgname/LICENSE" "$pkgdir/usr/share/licenses/$pkgname"
 }
-# vim:set ts=2 sw=2 et:
