--- a/BioArchLinux/r-later/lilac.yaml
+++ b/BioArchLinux/r-later/lilac.yaml
@@ -1,12 +1,15 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-rcpp
 - r-rlang
+repo_makedepends:
+- r-testthat
 update_on:
-- regex: later_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=later
+- source: rpkgs
+  pkgname: later
+  repo: cran
+  md5: true
 - alias: r
