--- a/BioArchLinux/r-gganimate/PKGBUILD
+++ b/BioArchLinux/r-gganimate/PKGBUILD
@@ -1,16 +1,16 @@
-# Maintainer: Guoyi Zhang <guoyizhang at malacology dot net>
+# Maintainer: Pekka Ristola <pekkarr [at] protonmail [dot] com>
+# Contributor: Guoyi Zhang <guoyizhang at malacology dot net>
 
 _pkgname=gganimate
 _pkgver=1.0.8
 pkgname=r-${_pkgname,,}
-pkgver=1.0.8
+pkgver=${_pkgver//-/.}
 pkgrel=4
-pkgdesc='A Grammar of Animated Graphics'
-arch=('any')
+pkgdesc="A Grammar of Animated Graphics"
+arch=(any)
 url="https://cran.r-project.org/package=${_pkgname}"
-license=('MIT')
+license=(MIT)
 depends=(
-  r
   r-ggplot2
   r-glue
   r-progress
@@ -18,6 +18,13 @@ depends=(
   r-scales
   r-stringi
   r-tweenr
+)
+checkdepends=(
+  r-gifski
+  r-magick
+  r-testthat
+  r-transformr
+  ttf-font
 )
 optdepends=(
   r-av
@@ -34,15 +41,32 @@ optdepends=(
   r-transformr
 )
 source=("https://cran.r-project.org/src/contrib/${_pkgname}_${_pkgver}.tar.gz")
+md5sums=('2ec08a5316dfd4d845238dfb296e2b91')
 sha256sums=('a12d865ddecea761e8f12bdc3bfdb78642f7ab2d53b78940e1290c9071d24bc9')
 
+prepare() {
+  # Skip test until upstream fixes the bug
+  # https://github.com/thomasp85/gganimate/commit/1193080105062a4259be0da085d0f26aca0f20c2
+  # https://github.com/thomasp85/gganimate/issues/287
+  # https://github.com/thomasp85/gganimate/issues/447
+  sed -i '/contour works/a\ \ skip("Upstream bug #287")' \
+      "$_pkgname/tests/testthat/test-transition-states.R"
+}
+
 build() {
-  R CMD INSTALL ${_pkgname}_${_pkgver}.tar.gz -l "${srcdir}"
+  mkdir -p build
+  R CMD INSTALL "$_pkgname" -l build
+}
+
+check() {
+  cd "$_pkgname/tests"
+  R_LIBS="$srcdir/build" NOT_CRAN=true Rscript --vanilla testthat.R
 }
 
 package() {
-  install -dm0755 "${pkgdir}/usr/lib/R/library"
-  cp -a --no-preserve=ownership "${_pkgname}" "${pkgdir}/usr/lib/R/library"
-  install -Dm644 "${_pkgname}/LICENSE" -t "${pkgdir}/usr/share/licenses/${pkgname}"
+  install -d "$pkgdir/usr/lib/R/library"
+  cp -a --no-preserve=ownership "build/$_pkgname" "$pkgdir/usr/lib/R/library"
+
+  install -d "$pkgdir/usr/share/licenses/$pkgname"
+  ln -s "/usr/lib/R/library/$_pkgname/LICENSE" "$pkgdir/usr/share/licenses/$pkgname"
 }
-# vim:set ts=2 sw=2 et:
