r-raster: use metadata checks

--- a/BioArchLinux/r-raster/PKGBUILD
+++ b/BioArchLinux/r-raster/PKGBUILD
@@ -1,43 +1,51 @@
-# system requirements: C++11
-# Maintainer: Guoyi Zhang <guoyizhang at malacology dot net>
+# Maintainer: Pekka Ristola <pekkarr [at] protonmail [dot] com>
+# Contributor: Guoyi Zhang <guoyizhang at malacology dot net>
+# Contributor: peippo <christoph+aur@christophfink.com>
+# Contributor: Viktor Drobot (aka dviktor) linux776 [at] gmail [dot] com
+# Contributor: Jooa <aur at (name) dot xyz>
 
 _pkgname=raster
 _pkgver=3.6-23
 pkgname=r-${_pkgname,,}
-pkgver=3.6.23
+pkgver=${_pkgver//-/.}
 pkgrel=1
-pkgdesc='Geographic Data Analysis and Modeling'
-arch=('x86_64')
+pkgdesc="Geographic Data Analysis and Modeling"
+arch=(x86_64)
 url="https://cran.r-project.org/package=${_pkgname}"
-license=('GPL')
+license=(GPL3)
 depends=(
-  r
   r-rcpp
   r-sp
   r-terra
+)
+checkdepends=(
+  r-tinytest
 )
 optdepends=(
   r-exactextractr
   r-fields
   r-gstat
   r-igraph
-  r-mass
   r-ncdf4
-  r-parallel
   r-rastervis
   r-sf
-  r-tcltk
   r-tinytest
 )
 source=("https://cran.r-project.org/src/contrib/${_pkgname}_${_pkgver}.tar.gz")
+md5sums=('aab208d1605b05b3379a41e6400c00e5')
 sha256sums=('bf456874a15de14da631b6c52f222f6e532fe0fbab2c241189b0cec49d46e159')
 
 build() {
-  R CMD INSTALL ${_pkgname}_${_pkgver}.tar.gz -l "${srcdir}"
+  mkdir -p build
+  R CMD INSTALL "$_pkgname" -l build
+}
+
+check() {
+  cd "$_pkgname/tests"
+  R_LIBS="$srcdir/build" Rscript --vanilla tinytest.R
 }
 
 package() {
-  install -dm0755 "${pkgdir}/usr/lib/R/library"
-  cp -a --no-preserve=ownership "${_pkgname}" "${pkgdir}/usr/lib/R/library"
+  install -d "$pkgdir/usr/lib/R/library"
+  cp -a --no-preserve=ownership "build/$_pkgname" "$pkgdir/usr/lib/R/library"
 }
-# vim:set ts=2 sw=2 et:
