--- a/BioArchLinux/r-raster/lilac.yaml
+++ b/BioArchLinux/r-raster/lilac.yaml
@@ -1,13 +1,16 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-rcpp
 - r-sp
 - r-terra
+repo_makedepends:
+- r-tinytest
 update_on:
-- regex: raster_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=raster
+- source: rpkgs
+  pkgname: raster
+  repo: cran
+  md5: true
 - alias: r
