--- a/BioArchLinux/r-stars/lilac.yaml
+++ b/BioArchLinux/r-stars/lilac.yaml
@@ -1,14 +1,22 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: sukanka
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-abind
 - r-classint
-- r-lwgeom
 - r-rlang
 - r-sf
 - r-units
+repo_makedepends:
+- r-cubble
+- r-dplyr
+- r-ncmeta
+- r-raster
+- r-testthat
 update_on:
-- regex: stars_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=stars
+- source: rpkgs
+  pkgname: stars
+  repo: cran
+  md5: true
+- alias: r
