--- a/BioArchLinux/r-metabma/lilac.yaml
+++ b/BioArchLinux/r-metabma/lilac.yaml
@@ -1,21 +1,25 @@
 build_prefix: extra-x86_64
 maintainers:
-  - github: sukanka
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
-  - r-bh
-  - r-bridgesampling
-  - r-coda
-  - r-laplacesdemon
-  - r-logspline
-  - r-mvtnorm
-  - r-rcpp
-  - r-rcppeigen
-  - r-rcppparallel
-  - r-rstan
-  - r-rstantools
-  - r-stanheaders
+- r-bridgesampling
+- r-coda
+- r-laplacesdemon
+- r-logspline
+- r-mvtnorm
+- r-rcpp
+- r-rcppparallel
+- r-rstan
+- r-rstantools
+repo_makedepends:
+- r-bh
+- r-rcppeigen
+- r-stanheaders
+- r-testthat
 update_on:
-  - regex: metaBMA_([\d._-]+).tar.gz
-    source: regex
-    url: https://cran.r-project.org/package=metaBMA
-  - alias: r
+- source: rpkgs
+  pkgname: metaBMA
+  repo: cran
+  md5: true
+- alias: r
