r-yulab.utils: fix depends

--- a/BioArchLinux/r-yulab.utils/lilac.yaml
+++ b/BioArchLinux/r-yulab.utils/lilac.yaml
@@ -3,6 +3,9 @@ maintainers:
 - github: pekkarr
   email: pekkarr@protonmail.com
 repo_depends:
+- r-cli
+- r-digest
+- r-fs
 - r-memoise
 - r-rlang
 update_on:
