--- a/BioArchLinux/r-git2r/lilac.yaml
+++ b/BioArchLinux/r-git2r/lilac.yaml
@@ -1,9 +1,15 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 update_on:
-- regex: git2r_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=git2r
+- source: rpkgs
+  pkgname: git2r
+  repo: cran
+  md5: true
 - alias: r
+- source: alpm
+  alpm: libgit2
+  repo: extra
+  provided: libgit2.so
+  strip_release: true
