--- a/BioArchLinux/r-pkgload/lilac.yaml
+++ b/BioArchLinux/r-pkgload/lilac.yaml
@@ -1,18 +1,20 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-cli
 - r-crayon
 - r-desc
 - r-fs
 - r-glue
+- r-pkgbuild
 - r-rlang
 - r-rprojroot
 - r-withr
 update_on:
-- regex: pkgload_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=pkgload
+- source: rpkgs
+  pkgname: pkgload
+  repo: cran
+  md5: true
 - alias: r
