--- a/BioArchLinux/r-biodbhmdb/lilac.yaml
+++ b/BioArchLinux/r-biodbhmdb/lilac.yaml
@@ -1,14 +1,18 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-biodb
 - r-r6
 - r-rcpp
+- r-zip
+repo_makedepends:
 - r-testthat
+- r-xml2
 update_on:
-- regex: biodbHmdb_([\d._-]+).tar.gz
-  source: regex
-  url: https://bioconductor.org/packages/biodbHmdb
+- source: rpkgs
+  pkgname: biodbHmdb
+  repo: bioc
+  md5: true
 - alias: r
