--- a/BioArchLinux/r-bayesm/lilac.yaml
+++ b/BioArchLinux/r-bayesm/lilac.yaml
@@ -1,12 +1,22 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-rcpp
+repo_makedepends:
 - r-rcpparmadillo
 update_on:
-- regex: bayesm_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=bayesm
+- source: rpkgs
+  pkgname: bayesm
+  repo: cran
+  md5: true
 - alias: r
+- source: alpmfiles
+  pkgname: blas
+  filename: usr/lib/libblas\.so\.([^.]+)
+  repo: extra
+- source: alpmfiles
+  pkgname: lapack
+  filename: usr/lib/liblapack\.so\.([^.]+)
+  repo: extra
