r-askpass: use metadata checks

--- a/BioArchLinux/r-askpass/lilac.yaml
+++ b/BioArchLinux/r-askpass/lilac.yaml
@@ -1,11 +1,14 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-sys
+repo_makedepends:
+- r-testthat
 update_on:
-- regex: askpass_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=askpass
+- source: rpkgs
+  pkgname: askpass
+  repo: cran
+  md5: true
 - alias: r
