--- a/BioArchLinux/r-openssl/lilac.yaml
+++ b/BioArchLinux/r-openssl/lilac.yaml
@@ -1,12 +1,26 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-askpass
+repo_makedepends:
+- r-curl
+- r-sodium
+- r-testthat
 update_on:
-- regex: openssl_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=openssl
+- source: rpkgs
+  pkgname: openssl
+  repo: cran
+  md5: true
 - alias: r
-- alias: libssl
+- source: alpm
+  alpm: openssl
+  repo: core
+  provided: libcrypto.so
+  strip_release: true
+- source: alpm
+  alpm: openssl
+  repo: core
+  provided: libssl.so
+  strip_release: true
