--- a/BioArchLinux/r-pcalg/lilac.yaml
+++ b/BioArchLinux/r-pcalg/lilac.yaml
@@ -1,11 +1,10 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-abind
 - r-bdsmatrix
-- r-bh
 - r-clue
 - r-corpcor
 - r-fastica
@@ -14,12 +13,23 @@ repo_depends:
 - r-igraph
 - r-rbgl
 - r-rcpp
-- r-rcpparmadillo
 - r-robustbase
 - r-sfsmisc
 - r-vcd
+repo_makedepends:
+- r-bh
+- r-rcpparmadillo
 update_on:
-- regex: pcalg_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=pcalg
+- source: rpkgs
+  pkgname: pcalg
+  repo: cran
+  md5: true
 - alias: r
+- source: alpmfiles
+  pkgname: blas
+  filename: usr/lib/libblas\.so\.([^.]+)
+  repo: extra
+- source: alpmfiles
+  pkgname: lapack
+  filename: usr/lib/liblapack\.so\.([^.]+)
+  repo: extra
