--- a/BioArchLinux/r-rsvg/lilac.yaml
+++ b/BioArchLinux/r-rsvg/lilac.yaml
@@ -1,9 +1,25 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 update_on:
-- regex: rsvg_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=rsvg
+- source: rpkgs
+  pkgname: rsvg
+  repo: cran
+  md5: true
 - alias: r
+- source: alpm
+  alpm: cairo
+  repo: extra
+  provided: libcairo.so
+  strip_release: true
+- source: alpm
+  alpm: glib2
+  repo: core
+  provided: libgobject-2.0.so
+  strip_release: true
+- source: alpm
+  alpm: librsvg
+  repo: extra
+  provided: librsvg-2.so
+  strip_release: true
