--- a/BioArchLinux/r-qpdf/lilac.yaml
+++ b/BioArchLinux/r-qpdf/lilac.yaml
@@ -1,13 +1,20 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-askpass
 - r-curl
 - r-rcpp
+repo_makedepends:
+- r-testthat
 update_on:
-- regex: qpdf_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=qpdf
+- source: rpkgs
+  pkgname: qpdf
+  repo: cran
+  md5: true
 - alias: r
+- source: alpmfiles
+  pkgname: qpdf
+  filename: usr/lib/libqpdf\.so\.([^.]+)
+  repo: extra
