--- a/BioArchLinux/python-selenium/PKGBUILD
+++ b/BioArchLinux/python-selenium/PKGBUILD
@@ -5,7 +5,7 @@
 _pyname=selenium
 _suffix=''
 pkgname=python-$_pyname
-pkgver=4.10.0
+pkgver=4.13.0
 pkgrel=1
 pkgdesc="Python language bindings for Selenium WebDriver"
 arch=(any)
@@ -15,20 +15,20 @@ depends=('python-urllib3' 'python-certifi' 'python-debugpy' 'python-multidict'
          'python-importlib-metadata' 'python-trio-websocket'
          'python-inflection' 'geckodriver' 'python-typing_extensions')
 makedepends=(python-build python-installer python-setuptools python-wheel)
-checkdepends=(python-pytest)
+checkdepends=('python-pytest' 'python-colorama')
 source=(https://github.com/SeleniumHQ/${_pyname}/archive/refs/tags/${_pyname}-${pkgver}${suffix}.tar.gz)
-sha256sums=('873f8071df2dd0c175216721e39072f8a9821119ac21b1ddb52a21f6a0ad442e')
+sha256sums=('f8db7bad393b5bdf31cfca6b80a46bbb503ab0f47f4d134745545bbdb7a347fe')
 options=(!makeflags)
 
 prepare() {
-  cd "${srcdir}/${_pyname}-${_pyname}-${pkgver}${suffix}/py"
+  cd "${srcdir}/${_pyname}-${_pyname}-${pkgver}/py"
   cp ../rb/lib/$_pyname/webdriver/atoms/* $_pyname/webdriver/remote
   echo '{"frozen":{},"mutable":{}}' > \
     $_pyname/webdriver/firefox/webdriver_prefs.json
 }
 
 build() {
-  cd "${srcdir}/${_pyname}-${_pyname}-${pkgver}${suffix}/py"
+  cd "${srcdir}/${_pyname}-${_pyname}-${pkgver}/py"
   python -m build \
     --wheel \
     --no-isolation \
@@ -36,18 +36,15 @@ build() {
 }
 
 check() {
-  cd "${srcdir}/${_pyname}-${_pyname}-${pkgver}${suffix}/py"
+  cd "${srcdir}/${_pyname}-${_pyname}-${pkgver}/py"
 
-  python -m venv --system-site-packages test-env
-  test-env/bin/python -m installer dist/*.whl
-
-  test-env/bin/python -m pytest -v
+  python -m pytest
 }
 
 package() {
-  cd "${srcdir}/${_pyname}-${_pyname}-${pkgver}${suffix}/py"
+  cd "${srcdir}/${_pyname}-${_pyname}-${pkgver}/py"
   python -m installer \
     --destdir="$pkgdir" \
-    --compile-bytecode=1 \
+    --compile-bytecode=2 \
     dist/*.whl
 }
