r-qpdf: use --configure-vars option

--- a/BioArchLinux/r-qpdf/PKGBUILD
+++ b/BioArchLinux/r-qpdf/PKGBUILD
@@ -28,7 +28,8 @@ sha256sums=('d9c905a4879274d72de0c638f2e14737ec0a59895cbba9814e05c62b43e8e976')
 
 build() {
   mkdir -p build
-  EXTERNAL_QPDF=1 R CMD INSTALL "$_pkgname" -l build
+  R CMD INSTALL "$_pkgname" -l build \
+      --configure-vars=EXTERNAL_QPDF=yes
 }
 
 check() {
