--- a/BioArchLinux/r-pdftools/lilac.yaml
+++ b/BioArchLinux/r-pdftools/lilac.yaml
@@ -1,12 +1,20 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
 - r-qpdf
 - r-rcpp
+repo_makedepends:
+- r-testthat
 update_on:
-- regex: pdftools_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=pdftools
+- source: rpkgs
+  pkgname: pdftools
+  repo: cran
+  md5: true
 - alias: r
+- source: alpm
+  alpm: poppler
+  repo: extra
+  provided: libpoppler-cpp.so
+  strip_release: true
